--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,11 +2,6 @@ spring:
   application:
     name: ramble
 
-springdoc:
-  swagger-ui:
-    path: /api-docs
-    groups-order: DESC
-    tags-sorter: alpha
-    operationsSorter: method
-    disable-swagger-default-url: true
-    display-request-duration: true
+  profiles:
+    active: dev
+    include: common, swagger
