--- a/src/main/resources/application-secret.yml
+++ b/src/main/resources/application-secret.yml
@@ -2,3 +2,13 @@ jwt:
   secret: ${JWT_SECRET}
   issuer: ${JWT_ISSUER}
   expiration-ms: ${JWT_EXPIRATION_MS}
+
+spring:
+  security:
+    oauth2:
+      client:
+        registration:
+          google:
+            client-id: ${GOOGLE_CLIENT_ID}
+            client-secret: ${GOOGLE_CLIENT_SECRET}
+            redirect-uri: ${GOOGLE_REDIRECT_URI}
