--- a/src/main/resources/application-secret.yml
+++ b/src/main/resources/application-secret.yml
@@ -1,7 +1,9 @@
 jwt:
   secret: ${JWT_SECRET}
   issuer: ${JWT_ISSUER}
-  expiration-ms: ${JWT_EXPIRATION_MS}
+  expiration-ms:
+    access: ${JWT_ACCESS_EXPIRATION_MS}
+    refresh: ${JWT_REFRESH_EXPIRATION_MS}
 
 spring:
   security:
