--- a/build.gradle
+++ b/build.gradle
@@ -30,6 +30,8 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-starter-websocket'
 
+	implementation 'org.springframework.security:spring-security-messaging'
+
 	// Swagger-UI
 	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.8'
 
