--- a/build.gradle
+++ b/build.gradle
@@ -24,6 +24,7 @@ repositories {
 }
 
 dependencies {
+	implementation 'org.springframework.boot:spring-boot-starter-cache'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
 	implementation 'org.springframework.boot:spring-boot-starter-security'
@@ -31,6 +32,9 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-websocket'
 
 	implementation 'org.springframework.security:spring-security-messaging'
+
+	// Caffeine Cache
+	implementation 'com.github.ben-manes.caffeine:caffeine:3.2.0'
 
 	// Swagger-UI
 	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.8'
