chore: JWT 설정 만료 시간 구조 변경 #25

--- a/src/main/resources/application-secret.yml
+++ b/src/main/resources/application-secret.yml
@@ -1,7 +1,7 @@
 jwt:
   secret: ${JWT_SECRET}
   issuer: ${JWT_ISSUER}
-  expiration-ms:
+  expiration:
     access: ${JWT_ACCESS_EXPIRATION_MS}
     refresh: ${JWT_REFRESH_EXPIRATION_MS}
 
