feat: Google 로그인 경로를 허용 목록에 추가 #38

--- a/src/main/resources/application-security-http.yml
+++ b/src/main/resources/application-security-http.yml
@@ -4,6 +4,7 @@ security:
       - /oauth2/authorize/**
       - /oauth2/callback/**
     permit-paths:
+      - /oauth/login/google
       - /api-docs/**
       - /v3/api-docs/**
       - /swagger-ui/**
