--- a/build.gradle
+++ b/build.gradle
@@ -45,6 +45,9 @@ dependencies {
 	runtimeOnly  'io.jsonwebtoken:jjwt-impl:0.12.6'
 	runtimeOnly  'io.jsonwebtoken:jjwt-jackson:0.12.6'
 
+	implementation "org.springframework.boot:spring-boot-starter-data-redis"
+	implementation "io.minio:minio:8.5.17"
+
 	runtimeOnly 'com.mysql:mysql-connector-j'
 
 	compileOnly 'org.projectlombok:lombok'
