refactor: OAuth 로그인 플로우 개선 (#39)
* fix: 구글 OAuth 리다이렉트 URI 공백 제거

* refactor: 불필요한 로직 제거 및 CORS 설정 #38

* feat: OAuth DTOs 추가 #38

 - OAuthRequestDTO
 - OAuthRegisterDTO

* refactor: registerOrLogin의 파라미터를 OAuthRegisterDTO로 변경 #38

* feat: ID token 파싱을 위한 OidcTokenParser 추가 #38

* feat: Google OAuth 사용자 정보 조회를 위한 OAuthService 추가 #38

* feat: Google 로그인 기능을 위한 OAuthController 추가 #38

* feat: Google 로그인 경로를 허용 목록에 추가 #38

* chore: dependabot 스케줄 변경 및 assign 추가

* feat: OAuth DTOs에 유효성 검사 추가 #38

* feat: OAuthRegisterDTO에 이메일 형식 및 null 검사 추가 #38

* refactor: OidcTokenParser를 컴포넌트로 변경 및 JWT 디코더 초기화 추가 #38

* feat: OAuthIdTokenDTO 추가 #38

* refactor: OAuthRequestDTO -> OAuthPkceDTO 변경 #38

* chore: scope 추가 및 경로 허용 변경 #38

* feat: 모바일을 위한 ID token 기반 로그인 추가 #38

--- a/src/main/resources/application-security-http.yml
+++ b/src/main/resources/application-security-http.yml
@@ -9,6 +9,7 @@ security:
       - /swagger-ui/**
       - /ws/**
       - /auth/reissue
+      - /oauth/**
     cors:
       allowed-origins: # TODO : 추후 FE로 변경
         - "*"
