--- a/src/main/resources/application-secret.yml
+++ b/src/main/resources/application-secret.yml
@@ -13,4 +13,7 @@ spring:
           google:
             client-id: ${GOOGLE_CLIENT_ID}
             client-secret: ${GOOGLE_CLIENT_SECRET}
-            redirect-uri: ${GOOGLE_REDIRECT_URI}
+            scope:
+              - openid
+              - email
+              - profile
