feat: DeviceType 처리를 위한 커스텀 헤더 추가 #20

--- a/src/main/resources/application-security-http.yml
+++ b/src/main/resources/application-security-http.yml
@@ -22,5 +22,6 @@ security:
       allowed-headers:
         - Authorization
         - Content-Type
+        - Ramble-Client-Platform
       allow-credentials: true
       max-age: 3600
