feat: 공개키 환경변수 적용 및 AES 키 암호화 로직 개선
- UserSnapshotEncrytionProperties에서 Base64 인코딩된 공개키를 읽어옴
- NudeDetectionServiceImpl에서 RSA 키 페어 생성 대신 환경변수 공개키를 PublicKey 객체로 변환하여 AES 키 암호화에 사용
- getRSAKeyPair() 메서드 제거
- 공개키 Base64 -> PublicKey 변환 헬퍼 메서드 추가

--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -32,6 +32,10 @@ storage:
     access-key: ${STORAGE_ACCESS_KEY}
     secret-key: ${STORAGE_SECRET_KEY}
 
+encryption:
+  user-snapshot:
+    public-key: ${USER_SNAPSHOT_ENCRYPTION_PUBLIC_KEY}
+
 logging:
   level:
     root: INFO
