feat: 유저 누드 감지 요청 API 구현 #44
* feat: 유저 신고 기능을 위한 모델 정의

* feat: 유저 신고 및 정지를 위한 모델 정의

* feat: 세션 참여자, 유저 정지, 유저 신고 모델 정의

* feat: 유저 신고 API 초기 구현

* feat: 유저 신고 API 구현
누드 감지 기능을 위한 오브젝트 스토리지 및 레디스 스트림 적용

* build: QueryDSL 추가

* feat: 유저 신고 API 신고 횟수 누적 시 정지 기능 구현

* fix(UserBandRepositoryImpl): isUserCurrentlyBanned() 메소드 쿼리 잘못된 부분 수정

* fix: 빠진 JPAQueryFactory 수동 빈 설정 추가

* chore: 의존성 Import 필요 없는 부분 제거 및 UserBanRepositoryImpl 레포지토리 애노테이션 명시적으로 추가

* feat: 공개키 환경변수 적용 및 AES 키 암호화 로직 개선

- UserSnapshotEncrytionProperties에서 Base64 인코딩된 공개키를 읽어옴
- NudeDetectionServiceImpl에서 RSA 키 페어 생성 대신 환경변수 공개키를 PublicKey 객체로 변환하여 AES 키 암호화에 사용
- getRSAKeyPair() 메서드 제거
- 공개키 Base64 -> PublicKey 변환 헬퍼 메서드 추가

* refactor: 누드 감지 시 정지 로직 보완

* chore(MinioConfig): 로그 제거

* fix: 예외 처리 및 값 검증 추가

* fix: 사용자 찾지 못할 시 예외 처리 수정

* docs: QueryDSL 취약점으로 인한 추후 보안 패치 버전 교체 필요를 알리는 주석 추가

* fix: ID로 사용자 찾지 못할 시 예외 수정

* refactor(SessionParticipant): 생성자 및 유니크 제약조건 추가

* fix(ObjectStorageService): 호출자가 InputStream 생명주기를 관리하도록 수정

* fix(SessionParticipant): 잘못된 부분 수정

* fix: 클래스명 오타 수정

* fix(UserBan): 인덱스 컬럼명 불일치 수정

* chore(NudeDetectionRequestDTO): 변수명 일관성있게 수정

* fix: 누드 감지 후 정지 시 유저 ID를 잘못 조회하던 버그 수정

* docs: 임시 파일 삭제 실패 시 로깅 추가

--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -1,6 +1,10 @@
 spring:
   main:
     lazy-initialization: true # 지연 초기화 활성화 (필요 없으면 제거)
+  servlet:
+    multipart:
+      max-file-size: 10MB
+      max-request-size: 10MB
 
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
@@ -15,6 +19,22 @@ spring:
       hibernate:
         format_sql: true
     database-platform: org.hibernate.dialect.MySQL8Dialect
+
+  data:
+    redis:
+      host: ${REDIS_HOST}
+      port: 6379
+
+storage:
+  endpoint: ${STORAGE_ENDPOINT}
+  bucket: ${STORAGE_BUCKET}
+  credentials:
+    access-key: ${STORAGE_ACCESS_KEY}
+    secret-key: ${STORAGE_SECRET_KEY}
+
+encryption:
+  user-snapshot:
+    public-key: ${USER_SNAPSHOT_ENCRYPTION_PUBLIC_KEY}
 
 logging:
   level:
