--- a/build.gradle
+++ b/build.gradle
@@ -45,6 +45,9 @@ dependencies {
 	runtimeOnly  'io.jsonwebtoken:jjwt-impl:0.12.6'
 	runtimeOnly  'io.jsonwebtoken:jjwt-jackson:0.12.6'
 
+	implementation "org.springframework.boot:spring-boot-starter-data-redis"
+	implementation "io.minio:minio:8.5.17"
+
 	runtimeOnly 'com.mysql:mysql-connector-j'
 
 	compileOnly 'org.projectlombok:lombok'
@@ -56,6 +59,11 @@ dependencies {
 	testImplementation 'org.springframework.security:spring-security-test'
 	testImplementation 'org.awaitility:awaitility:4.3.0'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+
+	implementation 'com.querydsl:querydsl-jpa:5.1.0:jakarta'	// 보안 패치 버전 공개 시 즉시 교체 예정
+	annotationProcessor "com.querydsl:querydsl-apt:${dependencyManagement.importedProperties['querydsl.version']}:jakarta"
+	annotationProcessor "jakarta.annotation:jakarta.annotation-api"
+	annotationProcessor "jakarta.persistence:jakarta.persistence-api"
 }
 
 tasks.named('test') {
