--- a/src/main/resources/application-security-http.yml
+++ b/src/main/resources/application-security-http.yml
@@ -1,5 +1,6 @@
 security:
   http:
+    domain: ${DOMAIN}
     oauth2-paths:
       - /oauth2/authorize/**
       - /oauth2/callback/**
@@ -11,16 +12,8 @@ security:
       - /auth/reissue
       - /oauth/**
     cors:
-      allowed-origins: # TODO : 추후 FE로 변경
-        - "*"
-      allowed-methods:
-        - GET
-        - POST
-        - PUT
-        - DELETE
-        - OPTIONS
-      allowed-headers:
-        - Authorization
-        - Content-Type
+      allowed-origins: ${ALLOWED_ORIGINS:http://localhost:5173}
+      allowed-methods: ${ALLOWED_METHODS:GET,POST,PUT,DELETE}
+      allowed-headers: ${ALLOWED_HEADERS:Content-Type,Authorization}
       allow-credentials: true
       max-age: 3600
