build: application-dev.yml 레디스 포트 환경변수화

--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -23,7 +23,7 @@ spring:
   data:
     redis:
       host: ${REDIS_HOST}
-      port: 6379
+      port: ${REDIS_PORT}
 
 storage:
   endpoint: ${STORAGE_ENDPOINT}
