--- a/src/main/resources/application-secret.yml
+++ b/src/main/resources/application-secret.yml
@@ -10,10 +10,34 @@ spring:
     oauth2:
       client:
         registration:
-          google:
-            client-id: ${GOOGLE_CLIENT_ID}
+          google-web:
+            provider: google
+            client-id: ${GOOGLE_CLIENT_ID_WEB}
             client-secret: ${GOOGLE_CLIENT_SECRET}
+            authorization-grant-type: authorization_code
             scope:
               - openid
               - email
               - profile
+              - https://www.googleapis.com/auth/user.gender.read
+              - https://www.googleapis.com/auth/user.birthday.read
+          google-android:
+            provider: google
+            client-id: ${GOOGLE_CLIENT_ID_ANDROID}
+            authorization-grant-type: authorization_code
+            scope:
+              - openid
+              - email
+              - profile
+              - https://www.googleapis.com/auth/user.gender.read
+              - https://www.googleapis.com/auth/user.birthday.read
+          google-ios:
+            provider: google
+            client-id: ${GOOGLE_CLIENT_ID_IOS}
+            authorization-grant-type: authorization_code
+            scope:
+              - openid
+              - email
+              - profile
+              - https://www.googleapis.com/auth/user.gender.read
+              - https://www.googleapis.com/auth/user.birthday.read
