refactor: OAuth2 클라이언트 설정을 웹, 안드로이드, iOS로 분리 및 JWT 만료 설정 수정 #48

--- a/src/test/resources/application-secret.yml
+++ b/src/test/resources/application-secret.yml
@@ -1,7 +1,7 @@
 jwt:
   secret: ${JWT_SECRET}
   issuer: ${JWT_ISSUER}
-  expiration-ms:
+  expiration:
     access: ${JWT_ACCESS_EXPIRATION_MS}
     refresh: ${JWT_REFRESH_EXPIRATION_MS}
 
@@ -10,7 +10,34 @@ spring:
     oauth2:
       client:
         registration:
-          google:
-            client-id: ${GOOGLE_CLIENT_ID}
+          google-web:
+            provider: google
+            client-id: ${GOOGLE_CLIENT_ID_WEB}
             client-secret: ${GOOGLE_CLIENT_SECRET}
-            redirect-uri: ${GOOGLE_REDIRECT_URI}
+            authorization-grant-type: authorization_code
+            scope:
+              - openid
+              - email
+              - profile
+              - https://www.googleapis.com/auth/user.gender.read
+              - https://www.googleapis.com/auth/user.birthday.read
+          google-android:
+            provider: google
+            client-id: ${GOOGLE_CLIENT_ID_ANDROID}
+            authorization-grant-type: authorization_code
+            scope:
+              - openid
+              - email
+              - profile
+              - https://www.googleapis.com/auth/user.gender.read
+              - https://www.googleapis.com/auth/user.birthday.read
+          google-ios:
+            provider: google
+            client-id: ${GOOGLE_CLIENT_ID_IOS}
+            authorization-grant-type: authorization_code
+            scope:
+              - openid
+              - email
+              - profile
+              - https://www.googleapis.com/auth/user.gender.read
+              - https://www.googleapis.com/auth/user.birthday.read
