--- a/build.gradle
+++ b/build.gradle
@@ -37,6 +37,9 @@ dependencies {
 	// Caffeine Cache
 	implementation 'com.github.ben-manes.caffeine:caffeine:3.2.0'
 
+	// GeoIP2
+	implementation 'com.maxmind.geoip2:geoip2:4.0.0'
+
 	// Swagger-UI
 	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.9'
 
