--- a/build.gradle
+++ b/build.gradle
@@ -49,6 +49,7 @@ dependencies {
 	runtimeOnly  'io.jsonwebtoken:jjwt-jackson:0.12.6'
 
 	implementation "org.springframework.boot:spring-boot-starter-data-redis"
+	implementation 'org.redisson:redisson-spring-boot-starter:3.51.0'
 	implementation "io.minio:minio:8.5.17"
 
 	runtimeOnly 'com.mysql:mysql-connector-j'
