--- a/src/main/resources/application-common.yml
+++ b/src/main/resources/application-common.yml
@@ -5,10 +5,7 @@ server:
     remoteip:
       remote-ip-header: X-Forwarded-For
       protocol-header: X-Forwarded-Proto
-      internal-proxies: >
-        10\.\d{1,3}\.\d{1,3}\.\d{1,3}|
-        192\.168\.\d{1,3}\.\d{1,3}|
-        172\.(1[6-9]|2\d|3[0-1])\.\d{1,3}\.\d{1,3}
+      internal-proxies: '10\.\d{1,3}\.\d{1,3}\.\d{1,3}|192\.168\.\d{1,3}\.\d{1,3}|172\.(1[6-9]|2\d|3[0-1])\.\d{1,3}\.\d{1,3}'
 
 spring:
   jackson:
