--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -4,13 +4,14 @@ updates:
   - package-ecosystem: "gradle"
     directory: "/"
     schedule:
-      interval: "monthly"  # "daily", "weekly", "monthly"
+      interval: "weekly"  # "daily", "weekly", "monthly"
     open-pull-requests-limit: 5
     ignore:
       - dependency-name: "org.springframework.boot:spring-boot"
-        update-types: [ "version-update:semver-major" ]
-    assignees:
-      - "dependabot-bot"
+    groups:
+      jjwt:
+        patterns:
+          - "io.jsonwebtoken:jjwt-*"
 
   # GitHub Actions 워크플로우 업데이트
   - package-ecosystem: "github-actions"
@@ -18,5 +19,3 @@ updates:
     schedule:
       interval: "monthly"
     open-pull-requests-limit: 2
-    assignees:
-      - "dependabot-bot"
