--- a/build.gradle
+++ b/build.gradle
@@ -37,6 +37,9 @@ dependencies {
 	// Caffeine Cache
 	implementation 'com.github.ben-manes.caffeine:caffeine:3.2.0'
 
+	// GeoIP2
+	implementation 'com.maxmind.geoip2:geoip2:4.3.0'
+
 	// Swagger-UI
 	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.9'
 
@@ -46,6 +49,7 @@ dependencies {
 	runtimeOnly  'io.jsonwebtoken:jjwt-jackson:0.12.6'
 
 	implementation "org.springframework.boot:spring-boot-starter-data-redis"
+	implementation 'org.redisson:redisson-spring-boot-starter:3.51.0'
 	implementation "io.minio:minio:8.5.17"
 
 	runtimeOnly 'com.mysql:mysql-connector-j'
