chore: application.yml 설정 추가 #60
- application-dev geolite Docker 설정 추가
- application-local.yml 추가

--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -38,7 +38,7 @@ encryption:
 
 maxmind:
   geolite:
-    path: file:/app/data/GeoLite2-City.mmdb
+    path: classpath:geo/GeoLite2-City.mmdb
 
 logging:
   level:
