--- a/build.gradle
+++ b/build.gradle
@@ -45,8 +45,8 @@ dependencies {
 
 	// JWT
 	implementation 'io.jsonwebtoken:jjwt-api:0.12.6'
-	runtimeOnly  'io.jsonwebtoken:jjwt-impl:0.12.6'
-	runtimeOnly  'io.jsonwebtoken:jjwt-jackson:0.12.6'
+	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.6'
+	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.6'
 
 	implementation "org.springframework.boot:spring-boot-starter-data-redis"
 	implementation 'org.redisson:redisson-spring-boot-starter:3.51.0'
@@ -72,4 +72,8 @@ dependencies {
 
 tasks.named('test') {
 	useJUnitPlatform()
+}
+
+jar {
+	enabled = false
 }
