--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -95,7 +95,7 @@ services:
     entrypoint: >
       /bin/sh -c '
         mc alias set local http://minio:9000 ${STORAGE_ACCESS_KEY} ${STORAGE_SECRET_KEY} &&
-        mc mb local/${STORAGE_BUCKET} &&
+        mc mb --ignore-existing local/${STORAGE_BUCKET} &&
         mc policy set public local/${STORAGE_BUCKET}
       '
     restart: "no"
