fix: application.properties 에서 오브젝트 스토리지 region 설정 추가 #71

--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -28,6 +28,7 @@ spring:
 storage:
   endpoint: ${STORAGE_ENDPOINT}
   bucket: ${STORAGE_BUCKET}
+  region: ${STORAGE_REGION}
   credentials:
     access-key: ${STORAGE_ACCESS_KEY}
     secret-key: ${STORAGE_SECRET_KEY}
