--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,41 +1,100 @@
-name: Server Deploy (Dev Server)
+name: Server Deploy
 on:
   push:
     branches: ["main"] #, "develop"] # develop 브랜치 추가하면 변경
+    paths:
+      - '.github/workflows/deploy.yml'
+      - 'src/**'
+      - 'build.gradle'
+      - 'gradle.properties'
+      - 'Dockerfile'
+
+concurrency:
+  group: 'deploy-dev'  # 브랜치별 독립적 실행 # develop 브랜치 추가하면 'deploy-${{ github.ref_name }}'로 변경
+  cancel-in-progress: true
+
+env:
+  REGISTRY: ghcr.io
+  IMAGE_NAME: ${{ github.repository }}
 
 jobs:
-  dev-build-and-push:
+  build-and-push:
+    name: Build and Push Docker Image (dev) # develop 브랜치 추가하면 'Build and ... (${{ github.ref_name }})'로 변경
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      packages: write
+
     steps:
       - name: Checkout repository
         uses: actions/checkout@v5
 
-      - name: Login to Docker Hub
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v3
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: Login to registry ${{ env.REGISTRY }}
         uses: docker/login-action@v3
         with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
+          registry: ${{ env.REGISTRY }}
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Docker meta
+        id: meta
+        uses: docker/metadata-action@v5
+        with:
+          images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
+          tags: |
+            type=raw,value=dev
+#            develop 추가 후 변경
+#            type=raw,value=latest,enable=${{ github.ref_name == 'main' }}
+#            type=raw,value=dev,enable=${{ github.ref_name == 'develop' }}
+            type=sha,prefix=,format=short
 
       - name: Build and push Docker image
         uses: docker/build-push-action@v6
         with:
           context: .
           push: true
-          tags: ${{ secrets.DOCKER_USERNAME }}/ramble-be:dev
+          platforms: linux/amd64,linux/arm64 # x86과 arm64 동시 빌드
+          tags: ${{ steps.meta.outputs.tags }}
+          labels: ${{ steps.meta.outputs.labels }}
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
+          provenance: false
 
-  dev-deploy:
-    needs: dev-build-and-push
+  deploy-to-ec2:
+    name: Deploy to EC2 (dev) # develop 브랜치 추가하면 'Deploy to EC2 (${{ github.ref_name }})'로 변경
+    needs: build-and-push
     runs-on: ubuntu-latest
-    environment: dev
+    permissions:
+      contents: read
+      id-token: write
+    environment: dev # ${{ github.ref_name == 'main' && 'prod' || 'dev' }} # develop 브랜치 추가하면 변경
+
     steps:
-      - name: Deploy to Dev Server
-        uses: appleboy/ssh-action@v0.1.10
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v5
         with:
-          host: ${{ secrets.SSH_HOST }}
-          username: ${{ secrets.SSH_USER }}
-          key: ${{ secrets.SSH_PRIVATE_KEY }}
-          script: |
-            cd /home/ubuntu/ramble-be
-            docker pull ${{ secrets.DOCKER_USERNAME }}/ramble-be:dev
-            docker-compose up -d --remove-orphans
-            docker system prune -f
+          aws-region: ${{ vars.AWS_REGION }}
+          role-to-assume: arn:aws:iam::${{ secrets.AWS_ACCOUNT_ID }}:role/${{ vars.AWS_GHACTIONS_ROLE }}
+
+      - name: Send SSM Run Command
+        run: |
+          IMAGE=$(echo "${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}" | tr '[:upper:]' '[:lower:]')
+          TAG="dev"
+
+          aws ssm send-command \
+              --instance-ids ${{ secrets.AWS_INSTANCE_ID }} \
+              --document-name "AWS-RunShellScript" \
+              --comment "Deploy Ramble BE (${{ github.ref_name }})" \
+              --parameters commands=[
+                "cd /home/ubuntu/ramble-be",
+                "docker pull $IMAGE:$TAG",
+                "docker-compose up -d --remove-orphans",
+                "docker system prune -f"
+              ] \
+              --output text
