refactor: SSM Run Command의 docker 명령어 사용자 변경 #70

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -88,8 +88,8 @@ jobs:
 
           COMMANDS="[
                 \"cd /home/ubuntu/ramble-be\",
-                \"sudo -u docker pull $IMAGE:$TAG\",
-                \"sudo -u docker-compose up -d --remove-orphans\",
+                \"sudo -u ubuntu docker pull $IMAGE:$TAG\",
+                \"sudo -u ubuntu docker-compose up -d --remove-orphans\",
                 \"docker image prune -f\"
           ]"
 
